RESOLVED FIXED47481
fast/viewport/viewport-45.html fails in GTK+/Qt
https://bugs.webkit.org/show_bug.cgi?id=47481
Summary fast/viewport/viewport-45.html fails in GTK+/Qt
Joone Hur
Reported 2010-10-10 23:43:40 PDT
./run-webkit-tests --gtk fast/viewport/viewport-45.html Running build-dumprendertree Running tests from /home/joone/git/WebKit/LayoutTests Testing 1 test cases. fast/viewport . fast/viewport/viewport-45.html -> failed 0.23s total testing time 1 test case (100%) had incorrect layout Starting webkit launcher. /tmp/layout-test-results/fast/viewport/viewport-45-actual.txt 1 viewport size 3200x3520 scale 0.100000 with limits [0.100000, 0.100000] 1 viewport size 3199x3519 scale 0.100000 with limits [0.100000, 0.100000] 2 2 QWebKit also seems to have the same problem as follows, LayoutTests/platform/qt/Skipped # viewport meta tag tests that fail on the bot for yet unknown reasons fast/viewport/viewport-6.html fast/viewport/viewport-45.html fast/viewport/viewport-58.html
Attachments
Patch (4.30 KB, patch)
2011-06-01 14:59 PDT, Igor Trindade Oliveira
no flags
Kenneth Rohde Christiansen
Comment 1 2010-10-14 10:55:08 PDT
Here are the expected results from Opera. fast/viewport/viewport-6.html Expected values: width=200, height=220, initial-scale=1.6 fast/viewport/viewport-45.html Expected values: width=3200, height=3520, initial-scale=0.1 fast/viewport/viewport-58.html Expected values: width=3200, height=3520, initial-scale=0.1
Caio Marcelo de Oliveira Filho
Comment 2 2011-02-23 11:05:56 PST
Reproduced with r79438 and Qt 4.7.1 in the tester virtual machine http://webkit.sed.hu/blog/20101028/qtwebkit-builder-and-tester-virtual-machine Curiously, in my Linux 64bits and Qt 4.7.x the three tests pass.
Caio Marcelo de Oliveira Filho
Comment 3 2011-02-23 11:06:47 PST
...my Linux 64bits and Qt 4.7.x and QtWebKit from trunk...
Igor Trindade Oliveira
Comment 4 2011-06-01 14:59:52 PDT
Created attachment 95670 [details] Patch Proposed patch.
Kenneth Rohde Christiansen
Comment 5 2011-06-01 15:12:01 PDT
Comment on attachment 95670 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=95670&action=review > LayoutTests/fast/viewport/viewport-86-expected.txt:1 > -viewport size 457x502 scale 0.700000 with limits [0.700000, 5.000000] and userScalable -1.000000 > +viewport size 457x503 scale 0.700000 with limits [0.700000, 5.000000] and userScalable -1.000000 Is this correct in comparison with other platforms?
Igor Trindade Oliveira
Comment 6 2011-06-02 05:50:17 PDT
Yeah, Just gtk is testing viewport tag and it works with the new expected result. (In reply to comment #5) > (From update of attachment 95670 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=95670&action=review > > > LayoutTests/fast/viewport/viewport-86-expected.txt:1 > > -viewport size 457x502 scale 0.700000 with limits [0.700000, 5.000000] and userScalable -1.000000 > > +viewport size 457x503 scale 0.700000 with limits [0.700000, 5.000000] and userScalable -1.000000 > > Is this correct in comparison with other platforms?
WebKit Commit Bot
Comment 7 2011-06-05 11:34:20 PDT
Comment on attachment 95670 [details] Patch Clearing flags on attachment: 95670 Committed r88134: <http://trac.webkit.org/changeset/88134>
WebKit Commit Bot
Comment 8 2011-06-05 11:34:25 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 9 2011-06-06 10:21:09 PDT
Revision r88134 cherry-picked into qtwebkit-2.2 with commit b1708ec <http://gitorious.org/webkit/qtwebkit/commit/b1708ec>
Note You need to log in before you can comment on or make changes to this bug.