2011-06-05  Igor Oliveira  <igor.oliveira@openbossa.org>

Reviewed by Kenneth Rohde Christiansen.

        fast/viewport/viewport-45.html fails in GTK+/Qt
        https://bugs.webkit.org/show_bug.cgi?id=47481

        Rebaseline tests.

        * fast/viewport/viewport-45-expected.txt:
        * fast/viewport/viewport-86-expected.txt:
        * platform/qt/Skipped:
2011-06-05  Igor Oliveira  <igor.oliveira@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        fast/viewport/viewport-45.html fails in GTK+/Qt
        https://bugs.webkit.org/show_bug.cgi?id=47481

        computeViewportAttributes does many math operations with float point arithmetic
        and in some cases there is loss of precision making tests have incorrect values.

        * dom/ViewportArguments.cpp:
        (WebCore::computeViewportAttributes):

Canonical link: https://commits.webkit.org/77579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88134 268f45cc-cd09-0410-ab3c-d52691b4dbfc